--- a/contato.html
+++ b/contato.html
@@ -73,20 +73,18 @@
     </section>
 
     <!-- ===================== MAIN ===================== -->
-<main class="flex justify-center items-center p-4 bg-gray-50 min-h-screen">
-    <div class="w-full max-w-3xl">
-        <div class="aspect-[4/5] md:aspect-[16/9]">
-            <iframe 
-                src="https://docs.google.com/forms/d/e/1FAIpQLSfmg_D5uI_8u-OlCZ0wdAlCSeP_bH68IfeNuz9NieE-KT4oCw/viewform?embedded=true" 
-                class="w-full h-full border-0 rounded-xl shadow-lg"
-                frameborder="0" 
-                marginheight="0" 
-                marginwidth="0">
-                Carregando…
-            </iframe>
-        </div>
+<main class="bg-gray-100 min-h-screen">
+    <div class="w-full h-screen">
+        <iframe 
+            src="https://docs.google.com/forms/d/e/1FAIpQLSfmg_D5uI_8u-OlCZ0wdAlCSeP_bH68IfeNuz9NieE-KT4oCw/viewform?embedded=true" 
+            class="w-full h-full"
+            frameborder="0" 
+            marginheight="0" 
+            marginwidth="0">
+            Carregando…
+        </iframe>
     </div>
- </main>
+                         </main>
   
   <!-- ===================== RODAPÉ ===================== -->
     <footer>
@@ -106,6 +104,7 @@
     </footer>
  </body>
 </html>
+
 
 
 
