--- a/espaco.html
+++ b/espaco.html
@@ -153,7 +153,7 @@
         para obter observações globais abrangentes.
       </p>
 
-      <a href="https://www.nasa.gov/mission_pages/a-train/" 
+      <a href="https://science.nasa.gov/mission/a-train/history-of-the-a-train-in-graphics/" 
          target="_blank" 
          rel="noopener noreferrer"
          class="mt-4 inline-block bg-purple-700 text-white text-sm font-medium px-4 py-2 rounded-lg shadow hover:bg-purple-800 transition">
@@ -213,6 +213,7 @@
     </footer>
  </body>
 </html>
+
 
 
 
