--- a/espaco.html
+++ b/espaco.html
@@ -167,13 +167,13 @@
            alt="Satélite Advanced Composition Explorer da NASA" 
            class="w-full h-40 object-cover rounded-xl shadow-md mb-4">
       
-      <h3 class="font-semibold text-lg text-gray-800">ÁS</h3>
+      <h3 class="font-semibold text-lg text-gray-800">Ace</h3>
       <p class="text-sm text-gray-600 mt-1 flex-grow">
         O Advanced Composition Explorer (ACE) da NASA coleta e analisa partículas de origem solar, 
         interplanetária, interestelar e galáctica. Os dados contribuem para a nossa compreensão do Sol.
       </p>
 
-      <a href="https://www.nasa.gov/mission_pages/ace/" 
+      <a href="https://science.nasa.gov/mission/ace/" 
          target="_blank" 
          rel="noopener noreferrer"
          class="mt-4 inline-block bg-purple-700 text-white text-sm font-medium px-4 py-2 rounded-lg shadow hover:bg-purple-800 transition">
@@ -213,6 +213,7 @@
     </footer>
  </body>
 </html>
+
 
 
 
