--- a/tecnologia.html
+++ b/tecnologia.html
@@ -80,24 +80,32 @@
   <h2 class="text-2xl font-bold text-green-700 mb-4">Inovações Recentes</h2>
   <div class="grid md:grid-cols-2 gap-6">
     
-    <!-- Card IA -->
-    <article class="bg-white p-5 rounded-2xl shadow flex flex-col">
-      <img src="https://i.postimg.cc/J46hmxhS/ai.webp" 
-           alt="Imagem ilustrativa de Inteligência Artificial" 
-           class="w-full h-40 object-cover rounded-xl shadow-md mb-4">
-      
-      <h3 class="font-semibold text-lg text-gray-800">IA Simula Reações Humanas</h3>
-      <p class="text-sm text-gray-600 mt-1 flex-grow">
-        Estudo da UFRJ revela uso da IA generativa para simular comportamentos humanos em pesquisas, oferecendo análises em larga escala com agilidade e baixo custo.
-      </p>
+    <!-- Card Vídeo Quântico -->
+<article class="bg-white p-5 rounded-2xl shadow flex flex-col">
+  <div class="w-full h-40 rounded-xl shadow-md mb-4 overflow-hidden">
+    <iframe class="w-full h-full rounded-xl"
+            src="https://www.youtube.com/embed/XPq0JHk33BY?si=2TNOLht7Jug-LdiS"
+            title="Vídeo com 2 024 átomos formando símbolo quântico"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen>
+    </iframe>
+  </div>
 
-      <a href="https://agenciabrasil.ebc.com.br/radioagencia-nacional/inovacao/audio/2025-06/estudo-mostra-que-ia-e-usada-para-simular-reacoes-humanas-em-pesquisas" 
-         target="_blank" 
-         rel="noopener noreferrer"
-         class="mt-4 inline-block bg-green-700 text-white text-sm font-medium px-4 py-2 rounded-lg shadow hover:bg-green-800 transition">
-        Saiba mais
-      </a>
-    </article>
+  <h3 class="font-semibold text-lg text-gray-800">
+    O Menor Vídeo de Gato do Mundo
+  </h3>
+  <p class="text-sm text-gray-600 mt-1 flex-grow">
+    Usando 2.024 átomos de rubídio, físicos recriaram o Gato de Schrödinger em um vídeo único. Mais que curiosidade, o feito abre caminho para avanços na computação quântica.
+  </p>
+
+  <a href="https://youtu.be/XPq0JHk33BY?si=2TNOLht7Jug-LdiS"
+     target="_blank"
+     rel="noopener noreferrer"
+     class="mt-4 inline-block bg-green-700 text-white text-sm font-medium px-4 py-2 rounded-lg shadow hover:bg-green-800 transition">
+    Assistir no YouTube
+  </a>
+</article>
 
     <!-- Card Carros Elétricos -->
     <article class="bg-white p-5 rounded-2xl shadow flex flex-col">
@@ -170,6 +178,7 @@
     </footer>
  </body>
 </html>
+
 
 
 
