--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
         <p>Seja bem-vindo ao <strong>Ciência News</strong>, onde ciência e história andam de mãos dadas, e cada descoberta tem uma história para contar.</p>
     </div>
 </section>
+    </main>
 
 
 
