--- a/index.html
+++ b/index.html
@@ -76,35 +76,35 @@
     <main>
         <!-- ===================== CARDS DE DESTAQUES ===================== -->
         <section class="cards-container">
-            <!-- Card 1 -->
-            <div class="card">
-                <img src="to-craft-early-tools-a.jpg" alt="Ferramentas de pedra antigas no Quênia">
-                <div class="card-body">
-                    <h3>Ferramentas de Pedra de 400 mil anos no Quênia</h3>
-                    <p>Descobertas arqueológicas revelam a engenhosidade dos primeiros humanos e suas habilidades avançadas de fabricação de ferramentas.</p>
-                    <a href="ferramentas-antigas.html">Leia mais →</a>
-                </div>
-            </div>
+    <!-- Card 1 -->
+    <div class="card">
+        <img src="to-craft-early-tools-a.jpg" alt="Motor microscópico desafia a 2ª lei da termodinâmica">
+        <div class="card-body">
+            <h3>O motor microscópico que quase engana a 2ª lei da termodinâmica</h3>
+            <p>Pesquisadores criam um motor em escala microscópica que chega perto de 100% de eficiência, desafiando o limite de Carnot.</p>
+            <a href="https://youtu.be/8IAhsVNr0XM?si=jocLI3T2X3i7Z-ta">Leia mais →</a>
+        </div>
+    </div>
 
-            <!-- Card 2 -->
-            <div class="card">
-                <img src="https://i.postimg.cc/Qdc4G8kP/intergalactic-experime.jpg" alt="Representação artística de axions no espaço">
-                <div class="card-body">
-                    <h3>Caçadores de Fantasmas Cósmicos</h3>
-                    <p>Cientistas observam galáxias distantes em busca de sinais de partículas de matéria escura, abrindo novas perspectivas sobre o universo.</p>
-                    <a href="cacadores-cosmicos.html">Leia mais →</a>
-                </div>
-            </div>
+    <!-- Card 2 -->
+    <div class="card">
+        <img src="https://i.postimg.cc/Qdc4G8kP/intergalactic-experime.jpg" alt="Espaço-tempo: metáfora ou realidade?">
+        <div class="card-body">
+            <h3>Espaço-tempo: tecido real do cosmos ou só metáfora brilhante?</h3>
+            <p>Einstein mudou nossa visão com o espaço-tempo, mas será que ele realmente existe ou é só linguagem enganando a ciência?</p>
+            <a href="https://youtu.be/ovV65vLh2kI?si=MKj3loVJAFOQKO9d">Leia mais →</a>
+        </div>
+    </div>
 
-            <!-- Card 3 -->
-            <div class="card">
-                <img src="nova-categoria-de-super-novas.jpg" alt="Categoria de Supernovas">
-                <div class="card-body">
-                    <h3>Nova Categoria de Supernovas Revela Ligação com Neurônios</h3>
-                    <p>Pesquisadores identificam padrões em supernovas que lembram conexões neuronais, oferecendo novas perspectivas astrofísicas.</p>
-                    <a href="nova-categoria-de-super-novas.html">Leia mais →</a>
-                </div>
-            </div>
+    <!-- Card 3 -->
+    <div class="card">
+        <img src="nova-categoria-de-super-novas.jpg" alt="Buracos negros e energia escura">
+        <div class="card-body">
+            <h3>Buracos negros podem ser a chave da energia escura?</h3>
+            <p>Dados do DESI sugerem que buracos negros geram energia escura e ajudam a resolver o enigma da massa dos neutrinos.</p>
+            <a href="https://youtu.be/T2jxwJXvMtQ?si=dWtANol4OYFIPO91">Leia mais →</a>
+        </div>
+    </div>
         </section>
 
         <!-- ===================== FEED DE OUTROS SITES ===================== --> 
