--- a/index.html
+++ b/index.html
@@ -78,34 +78,49 @@
         <section class="cards-container">
     <!-- Card 1 -->
     <div class="card">
-        <img src="to-craft-early-tools-a.jpg" alt="Motor microscópico desafia a 2ª lei da termodinâmica">
+        <div class="card-video">
+            <iframe width="100%" height="215" src="https://www.youtube.com/embed/8IAhsVNr0XM" 
+                title="O motor microscópico que quase engana a 2ª lei da termodinâmica" 
+                frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                allowfullscreen></iframe>
+        </div>
         <div class="card-body">
             <h3>O motor microscópico que quase engana a 2ª lei da termodinâmica</h3>
             <p>Pesquisadores criam um motor em escala microscópica que chega perto de 100% de eficiência, desafiando o limite de Carnot.</p>
-            <a href="https://youtu.be/8IAhsVNr0XM?si=jocLI3T2X3i7Z-ta">Leia mais →</a>
+            <a href="https://youtu.be/8IAhsVNr0XM?si=jocLI3T2X3i7Z-ta" target="_blank">Leia mais →</a>
         </div>
     </div>
 
     <!-- Card 2 -->
     <div class="card">
-        <img src="https://i.postimg.cc/Qdc4G8kP/intergalactic-experime.jpg" alt="Espaço-tempo: metáfora ou realidade?">
+        <div class="card-video">
+            <iframe width="100%" height="215" src="https://www.youtube.com/embed/ovV65vLh2kI" 
+                title="Espaço-tempo: tecido real do cosmos ou só metáfora brilhante?" 
+                frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                allowfullscreen></iframe>
+        </div>
         <div class="card-body">
             <h3>Espaço-tempo: tecido real do cosmos ou só metáfora brilhante?</h3>
             <p>Einstein mudou nossa visão com o espaço-tempo, mas será que ele realmente existe ou é só linguagem enganando a ciência?</p>
-            <a href="https://youtu.be/ovV65vLh2kI?si=MKj3loVJAFOQKO9d">Leia mais →</a>
+            <a href="https://youtu.be/ovV65vLh2kI?si=MKj3loVJAFOQKO9d" target="_blank">Leia mais →</a>
         </div>
     </div>
 
     <!-- Card 3 -->
     <div class="card">
-        <img src="nova-categoria-de-super-novas.jpg" alt="Buracos negros e energia escura">
+        <div class="card-video">
+            <iframe width="100%" height="215" src="https://www.youtube.com/embed/T2jxwJXvMtQ" 
+                title="Buracos negros podem ser a chave da energia escura?" 
+                frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                allowfullscreen></iframe>
+        </div>
         <div class="card-body">
             <h3>Buracos negros podem ser a chave da energia escura?</h3>
             <p>Dados do DESI sugerem que buracos negros geram energia escura e ajudam a resolver o enigma da massa dos neutrinos.</p>
-            <a href="https://youtu.be/T2jxwJXvMtQ?si=dWtANol4OYFIPO91">Leia mais →</a>
+            <a href="https://youtu.be/T2jxwJXvMtQ?si=dWtANol4OYFIPO91" target="_blank">Leia mais →</a>
         </div>
     </div>
-        </section>
+</section>
 
         <!-- ===================== FEED DE OUTROS SITES ===================== --> 
         <section class="feed-container"> <h2>Últimas Notícias</h2> <div class="feed-items"> <!-- Card 1 --> <div class="feed-item" onclick="window.open('https://phys.org/news/2025-08-year-history-great-salt-lake.html', '_blank')" style="cursor:pointer;"> <img src="https://i.postimg.cc/7LrTjbTW/the-8000-year-history.jpg" alt="Grande Lago Salgado"> <div class="feed-text"> <h3>A história de 8.000 anos registrada nos sedimentos do Grande Lago Salgado</h3> <p>Nos últimos 8.000 anos, o Grande Lago Salgado de Utah tem sido sensível a mudanças climáticas e ao fluxo de água. Agora, novos dados de isótopos de sedimentos indicam que a atividade humana nos últimos 200 anos levou o lago a um estado biogeoquímico não visto há pelo menos 2.000 anos.</p> </div> </div> <!-- Card 2 --> <div class="feed-item" onclick="window.open('https://phys.org/news/2025-08-human-embryo-implantat.html', '_blank')" style="cursor:pointer;"> <img src="https://i.postimg.cc/1tfnq6x4/human-embryo-implantat.jpg" alt="Implantação de Embriões"> <div class="feed-text"> <h3>Implantação de embriões humanos registrada em tempo real pela primeira vez</h3> <p>Pesquisadores do Instituto de Bioengenharia da Catalunha (IBEC), em colaboração com o Hospital Universitário Dexeus, capturaram imagens inéditas da implantação de um embrião humano. Esta é a primeira vez que o processo é registrado em tempo real e em 3D.</p> </div> </div> <!-- Card 3 --> <div class="feed-item" onclick="window.open('https://phys.org/news/2025-08-human-protein-ace2-modulation-entry.html', '_blank')" style="cursor:pointer;"> <img src="https://i.postimg.cc/xCCH3hmf/study-reveals-how-huma.jpg" alt="Proteína ACE2"> <div class="feed-text"> <h3>Como a modulação da proteína ACE2 humana pode impedir a entrada do coronavírus</h3> <p>No início da pandemia, a maioria das pesquisas, incluindo a nossa, concentrou-se em desenvolver medicamentos que pudessem bloquear a proteína spike do vírus. Este foi um primeiro passo lógico, mas, como vimos, o vírus é um alvo em movimento.</p> </div> </div> </div> </section>
