--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="canonical" href="https://canalciencianews.github.io/">
     
     <!-- Favicon -->
-<link rel="icon" href="favicon.ico" type="image/x-icon">
+<link rel="icon" href="favicon.png" type="image/x-icon">
 
     <!-- Schema.org -->
     <script type="application/ld+json">
