--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="description" content="Ciência News: Uma pílula com notícias sobre ciências, curiosidades, vídeos e conteúdos exclusivos.">
     <link rel="canonical" href="https://canalciencianews.github.io/">
     
-    <!-- Favicon -->
-<link rel="icon" href="favicon.png" type="image/x-icon">
+    <!-- Favicon PNG -->
+<link rel="icon" type="image/png" href="favicon.png">
 
     <!-- Schema.org -->
     <script type="application/ld+json">
