--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <header>
         <div class="container-header">
             <div class="logo">
-                <img src="logo.jpg" alt="Ciência News" style="height: 50px;">
+                <img src="logo.png" alt="Ciência News" style="height: 50px;">
             </div>
             <div class="menu-toggle" id="menu-toggle">
                 <span></span>
