--- a/index.html
+++ b/index.html
@@ -10,6 +10,37 @@
     <!-- Favicon PNG -->
 <link rel="icon" type="image/png" href="favicon.png">
 
+     <!-- ===================== OPEN GRAPH OTIMIZADO ===================== -->
+<meta property="og:title" content="Ciência News">
+<meta property="og:description" content="Uma pílula com notícias sobre ciências, curiosidades, vídeos e conteúdos exclusivos.">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://canalciencianews.github.io/">
+<meta property="og:locale" content="pt_BR">
+<meta property="og:site_name" content="Ciência News">
+
+<!-- Imagens para diferentes resoluções -->
+<meta property="og:image" content="https://canalciencianews.github.io/thumbnail-1200.png">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
+<meta property="og:image:alt" content="Ciência News - capa com notícias sobre ciência e tecnologia">
+
+<meta property="og:image" content="https://canalciencianews.github.io/thumbnail-800.png">
+<meta property="og:image:width" content="800">
+<meta property="og:image:height" content="418">
+<meta property="og:image:alt" content="Ciência News - capa com notícias sobre ciência e tecnologia">
+
+<meta property="og:image" content="https://canalciencianews.github.io/thumbnail-400.png">
+<meta property="og:image:width" content="400">
+<meta property="og:image:height" content="209">
+<meta property="og:image:alt" content="Ciência News - capa com notícias sobre ciência e tecnologia">
+
+<!-- ===================== TWITTER CARD OTIMIZADO ===================== -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Ciência News">
+<meta name="twitter:description" content="Uma pílula com notícias sobre ciências, curiosidades, vídeos e conteúdos exclusivos.">
+<meta name="twitter:image" content="https://canalciencianews.github.io/thumbnail-1200.png">
+<meta name="twitter:site" content="@CienciaNewsOficial">
+    
     <!-- Schema.org -->
     <script type="application/ld+json">
     {
