--- a/index.html
+++ b/index.html
@@ -239,6 +239,62 @@
 
     </section>
 
+<!-- ===========================
+     SEÇÃO DE CARDS - MEDICAL XPRESS (VERDE ESCURO)
+     - Cards em verde escuro
+     - Títulos em bege
+     - Descrições em branco
+     - Botões dourados com texto preto ("Leia mais")
+     - Responsivo, estilo moderno com Tailwind CSS
+     =========================== -->
+<section id="medical-xpress" class="py-16 bg-gray-50">
+  <div class="container mx-auto px-4">
+    <h2 class="text-3xl font-bold text-gray-800 mb-12 text-center">Medical Xpress</h2>
+    
+    <div class="grid md:grid-cols-3 gap-8">
+
+      <!-- CARD 1 -->
+      <div class="bg-green-800 rounded-lg shadow-lg overflow-hidden hover:shadow-xl transition-shadow duration-300 flex flex-col">
+        <img src="https://i.postimg.cc/9Q1V7ctN/01.jpg" alt="Sedativo Animal" class="w-full h-48 object-cover">
+        <div class="p-6 flex flex-col flex-grow">
+          <h3 class="text-beige-300 font-bold text-lg mb-2">Medical Xpress / Um sedativo animal continua aparecendo em mortes por opioides — o que você precisa saber sobre medetomidina</h3>
+          <p class="text-white text-sm mb-4 flex-grow">Um novo e perigoso adulterante de drogas está se espalhando pelo mercado ilícito de opioides nos Estados Unidos, tornando as overdoses significativamente mais difíceis de reverter. A medetomidina, um sedativo veterinário normalmente usado para sedar animais de estimação, está cada vez mais...</p>
+          <a href="https://medicalxpress.com/news/2025-09-animal-sedative-opioid-deaths-medetomidine.html" target="_blank" class="inline-block px-4 py-2 bg-yellow-400 text-black font-semibold rounded hover:bg-yellow-500 transition w-max">Leia mais</a>
+        </div>
+      </div>
+
+      <!-- CARD 2 -->
+      <div class="bg-green-800 rounded-lg shadow-lg overflow-hidden hover:shadow-xl transition-shadow duration-300 flex flex-col">
+        <img src="https://i.postimg.cc/nLzxKN3V/2.jpg" alt="App Paralisia Cerebral" class="w-full h-48 object-cover">
+        <div class="p-6 flex flex-col flex-grow">
+          <h3 class="text-beige-300 font-bold text-lg mb-2">Medical Xpress / Novo aplicativo torna o rastreamento da paralisia cerebral mais acessível, abrindo caminho para o diagnóstico precoce</h3>
+          <p class="text-white text-sm mb-4 flex-grow">Um aplicativo para smartphone, desenvolvido por pesquisadores da Universidade de Melbourne, está ajudando a acelerar o processo de diagnóstico de paralisia cerebral em bebês, permitindo que os pais realizem um teste de triagem precoce no conforto de seus...</p>
+          <a href="https://medicalxpress.com/news/2025-09-app-cerebral-palsy-screening-accessible.html" target="_blank" class="inline-block px-4 py-2 bg-yellow-400 text-black font-semibold rounded hover:bg-yellow-500 transition w-max">Leia mais</a>
+        </div>
+      </div>
+
+      <!-- CARD 3 -->
+      <div class="bg-green-800 rounded-lg shadow-lg overflow-hidden hover:shadow-xl transition-shadow duration-300 flex flex-col">
+        <img src="https://i.postimg.cc/mr5smVnY/03.jpg" alt="Estimulação Magnética Transcraniana" class="w-full h-48 object-cover">
+        <div class="p-6 flex flex-col flex-grow">
+          <h3 class="text-beige-300 font-bold text-lg mb-2">Medical Xpress / Enfrentando questões éticas sobre a estimulação magnética transcraniana</h3>
+          <p class="text-white text-sm mb-4 flex-grow">A estimulação magnética transcraniana (EMT) foi aprovada pela FDA para tratar alguns pacientes com depressão em 2008 e, desde então, tem sido usada em planos de tratamento para uma variedade de outros problemas de saúde. Mas o uso crescente da EMT...</p>
+          <a href="https://medicalxpress.com/news/2025-09-tackling-ethical-transcranial-magnetic.html" target="_blank" class="inline-block px-4 py-2 bg-yellow-400 text-black font-semibold rounded hover:bg-yellow-500 transition w-max">Leia mais</a>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
+<!-- FIM DA SEÇÃO DE CARDS - MEDICAL XPRESS -->
+
+  </div>
+</main>
+
+
+    </div>
+  </main>
+
   </div>
 </main>
 
